--- a/FrontEnd/src/components/Footer/Footer.css
+++ b/FrontEnd/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
     height:384px;
     bottom:0px;
     left:0px;
+    right: 0px;
     background-color: #0A2145;
     color: white;
     display: flex;
@@ -48,14 +49,13 @@
 
 @media only screen and (max-width: 768px) {
     .footer{
-        text-align:center ;
         display: grid;
         grid-template-areas: 
         'd d d'
         'a b c'
         ;
-        margin: 0;
         line-height: 20px;
+        justify-items: center;
     }
     .footer .img{
         margin: 0;
@@ -68,14 +68,57 @@
     }
     .footer .b{
         grid-area:b ;
+        width: 33%;
     }
     .footer .c{
         grid-area: c;
+        width: 33%;
+        display: grid;
+        grid-template-areas: 
+        'i i'
+        'e f'
+        'g h'
+        ; 
+        gap: 0px;
+        align-items: start;
+        justify-items: center;
+        /* height: auto; */
+
     }
     .footer .d{
         grid-area: d;
         width: 100%;
         margin: 10px;
         max-height: 100px;
+        text-align: center;
     }
+    .footer .footer-items{
+        width: auto !important;
+        font-size: 14px !important;
+        margin: 10px;
+    }
+    .footer .footer-items .footer-copy{
+        position: absolute;
+        bottom: 10px;
+        margin: auto;
+        text-align: center;
+        left: 30%;
+        right:30%;
+    }
+    .footer .i{
+        grid-area: i;
+        
+    }
+    .footer .e{
+        grid-area: e;
+    }
+    .footer .f{
+        grid-area: f;
+    }
+    .footer .g{
+        grid-area: g;
+    }
+    .footer .h{
+        grid-area: h;
+    } 
 }
