--- a/FrontEnd/src/components/Header/Header.css
+++ b/FrontEnd/src/components/Header/Header.css
@@ -49,6 +49,8 @@
         flex-direction: column;
         align-items: flex-start;
         height:auto;
+        width: 100%;
+        overflow: hidden;
     }
     .logo{
         margin:50px;
@@ -59,7 +61,7 @@
         height: 35px;
         width: 50px;
         position: absolute;
-        top: -52px;
+        top: -65px;
         right: 20px;
         z-index: 2;
         display: flex;
@@ -74,8 +76,11 @@
         border-radius: 10px;
         font-size: 100px;
     }
+    .header .logo{
+        width: auto !important;
+    }
     .header div{
-        width: 100%;
+        width:100%;
 
     }
     .header a{
