--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,3 +1,7 @@
+/* *{
+  outline: 1px solid red;
+ } */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
