--- a/FrontEnd/src/components/Footer/Footer.css
+++ b/FrontEnd/src/components/Footer/Footer.css
@@ -14,7 +14,7 @@
     align-items: center;
 }
 .footer .footer-items{
-    width:20%;
+    /* width:20%; */
     margin:50px;
     line-height: 28px;
     height: 200px
@@ -81,7 +81,7 @@
         ; 
         gap: 0px;
         align-items: start;
-        justify-items: center;
+        justify-items:center;
         /* height: auto; */
 
     }
