--- a/FrontEnd/src/components/Home/Home.css
+++ b/FrontEnd/src/components/Home/Home.css
@@ -3,7 +3,7 @@
 
 .hero{
     width: 100%;
-    max-height: 670px;
+    max-height: 800px;
     background-color: #0A2145;
     align-items: center;
 
@@ -15,7 +15,7 @@
 .hero-div h1{
     color: white;
     margin-top: 120px;
-    padding-top: 50px;
+    padding-top: 80px;
     margin-bottom: 20px;
     text-align: center;
     font-size: 60px;
@@ -26,28 +26,33 @@
 .hero p{
     color: white;
     text-align: center;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 350px;
+    margin-right: 350px;
     font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    
+   
+    
 }
-.Explore p{
+.Explore a{
     color: white;
    top: 160px;
     padding-top: 40px;
-    border-style:3px  solid red;
     font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    font-size: 16px;
 }
 .Explore button{
     width: 130px;
     height: 40px;
     border: none;
     border-radius: 7px;
-    background-color: red;
+    background: linear-gradient(180deg, #F06243 0%, #EE3C4C 100%);
     color: white;
     margin-left: 600px;
     margin-right: 600px;
     font-family: 'Open Sans', sans-serif;
-    margin-top: 30px;
+    margin-top: 70px;
     margin-bottom: 40px;
 }
 .code-codes{
@@ -62,11 +67,12 @@
 .code-codes .code3{
     margin-top: -230px;
     margin-left: -100px;
+
 }
 .brand{
-    height: 150px;
+    height: 300px;
     background-color: #EAF1FC;
-    margin-top: -70px;
+    margin-top: -68px;
 }
 .brands-with{
     margin-top: 40px;
@@ -93,4 +99,152 @@ line-height: 28px;
 text-align: center;
 color: #1B2028;
 }
+
+.Part{
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+    line-height: 24px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.partner3{
+    margin-top: -5px;
+}
+.choose{
+padding-top: 50px;
+
+}
+.choose h1{
+text-align: center;
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 34px;
+line-height: 40px;
+color: #0A2145;
+flex: none;
+}
+.choose  p{
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+text-align: center;
+color: #0A2145;
+
+}
+
+
+
+
+
+
+
+
+.wrapper {
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    min-width: 1000px;
+    max-width: 1100px;
+    height: 100%;
+    position: relative;
+    box-sizing: inherit;
+    box-sizing: border-box;
+    
+  }
+  
+  .wrapper:before,
+  .wrapper:after {
+    content: " ";
+    display: table;
+  }
+  
+  .wrapper:after {
+    clear: both;
+  }
+  
+  .wrapper .box {
+    margin: 10px auto;
+    padding: 0;
+    position: relative;
+    float: left;
+    width: 33.33333%;
+    height: 100%;
+    text-align: center;
+    box-sizing: border-box;
+  }
+  
+  .box .content {
+    margin: 10px;
+    padding: 10px;
+    min-height: 100px;
+    color: #1B2028;
+    background-color: #FEF2EF;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Open Sans';
+    box-sizing: border-box;
+    border-radius: 32px;
+    margin-left: 20px;
+    margin-right: 20px;
+   
+  }
+
+ 
+  .box .content11 {
+    margin: 10px;
+    padding: 10px;
+    min-height: 100px;
+    color: #1B2028;
+    background-color:  #EAF1FC;;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Open Sans';
+    box-sizing: border-box;
+    border-radius: 32px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+.box .content .content1{
+color: #1B2028;
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 32px;
+text-align: center;
+}
+
+.box .content .pinkCol {
+    width: 15px;
+    height: 15px;
+    padding:  15px  30px 30px 15px;
+    border-radius: 50%;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+.box .content11 .bluurur{
+    width: 15px;
+    height: 15px;
+    padding:  15px  30px 30px 15px;
+    border-radius: 50%;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
+.box .content .pinkCol{
+  background: #ffc0c0; 
+  color: #F06243; 
+}
+.box .content11 .bluurur{
+    background-color: #ABC7F3;
+    color: #0A2145;
+}
+
+
+
 
