--- a/FrontEnd/src/pages/FAQ/FAQ.css
+++ b/FrontEnd/src/pages/FAQ/FAQ.css
@@ -1,11 +1,11 @@
-*{
+/* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 body {
     color: #1B2028;
-}
+} */
 header {
     text-align: center;
 }
