--- a/FrontEnd/src/pages/FAQ/structure/structure.css
+++ b/FrontEnd/src/pages/FAQ/structure/structure.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -6,7 +6,7 @@
 body {
     font-family: sans-serif;
     text-align: center;
-}
+} */
 .question-section {
     background: #EAF1FC;
     border: none;
