worked on responsiveness of library

--- a/FrontEnd/src/components/Header/Header.css
+++ b/FrontEnd/src/components/Header/Header.css
@@ -33,6 +33,7 @@
     font-style: 600;
     font-size: 20px;
     line-height: 28px; 
+    color: inherit;
     /* background-color:brown; */
 }
 .header .active{
