--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,6 +1,6 @@
-*{
+/* *{
   outline: 1px solid red;
- }
+ } */
 
 body {
   margin: 0;
@@ -16,4 +16,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+a{
+  text-decoration: none;
+  cursor: pointer;
 }
