--- a/FrontEnd/src/pages/Login page/login.css
+++ b/FrontEnd/src/pages/Login page/login.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 main{
 font-family: 'Open Sans';
@@ -12,29 +11,31 @@ width: 100%;
 background: #0A2145;
 border-radius: 0px 30px 30px 0px;
 text-align: center;
-width: 711px;
+width: 50%;
 height: 1024px;
+display: flex;
+justify-content: center;
+align-items: center;
 
 }
 .Icon{
-justify-content: center;
-align-items: center;
-position: absolute;
 width: 226px;
 height: 226px;
-left: 250px;
-top: 399px;
+
 }
 .Right-Form-Container{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
-    position: relative;
+    /* position: relative;
     top: 40px;
-    left:350px ;
+    left:350px ; */
+    width: 50%;
 }
 
-h2{
+main h2{
 font-family: 'Open Sans';
 font-style: normal;
 font-weight:700;
@@ -83,7 +84,7 @@ padding-left: 10px;
     justify-content: space-between;
     
 }
-a{
+main a{
     text-decoration:none;
     font-style: italic;
     color: #EE3C4C;
@@ -116,7 +117,7 @@ top:13px;
 .lower-link{
     margin-top: 36px;
 }
-hr{
+main hr{
     border: 1px solid #BBC3D0;
     width: 481px;
 height: 0px;
