--- a/FrontEnd/src/pages/Reset Page/reset.css
+++ b/FrontEnd/src/pages/Reset Page/reset.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 
 main{
 font-family: 'Open Sans';
@@ -32,7 +32,7 @@ left: 250px;
 top: 399px;
 }
 
-h2{
+main h2{
 font-family: 'Open Sans';
 font-style: normal;
 font-weight: 700;
@@ -62,7 +62,7 @@ outline: none;
 padding-left: 10px;
 margin-top: 23px;
 }
-label{
+main label{
     font-family: 'Open Sans';
 font-style: normal;
 font-weight: 700;
@@ -77,7 +77,7 @@ form{
     display: flex;
     flex-direction: column;
 }
-p{
+main p{
     font-family: 'Open Sans';
 font-style: normal;
 font-weight: 400;
@@ -88,9 +88,6 @@ color: #000000;
 margin-top: 10px;
 }
 
-button{
-
-}
 #btn-1{
 width: 480px;
 height: 49px;
