--- a/FrontEnd/src/assets/styles/Login.css
+++ b/FrontEnd/src/assets/styles/Login.css
@@ -1,49 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-
-body{
-margin: 0;
-padding: 0;
-}
 main{
 font-family: 'Open Sans';
-margin: 0;
-padding: 0;
 }
 
 .Main-Container{
 display: flex;
 width: 100%;
-margin: 0;
-padding: 0;
 }
 .Left-Form-Container{
 background: #0A2145;
 border-radius: 0px 30px 30px 0px;
 text-align: center;
-width: 711px;
-height: 1024px;
+width: 50%;
+height: inherit;
+display: flex;
+justify-content: center;
+align-items: center;
 
 }
 .Icon{
-justify-content: center;
-align-items: center;
-position: absolute;
 width: 226px;
 height: 226px;
-left: 250px;
-top: 399px;
+
 }
 .Right-Form-Container{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
-    position: relative;
-    top: 40px;
-    left:350px ;
+    width: 50%;
+    padding: 100px 0px;
 }
 
-h2{
+main h2{
 font-family: 'Open Sans';
 font-style: normal;
 font-weight:700;
@@ -61,7 +51,7 @@ form{
     flex-direction: column;
     gap: 24px;
 }
-#submit{
+#submit, .but{
 display: flex;
 flex-direction: row;
 justify-content: center;
@@ -83,16 +73,14 @@ border: 1px solid #DDE1E8;
 outline: none;
 padding-left: 10px;
 }
-#inputs:hover{
-    border:none;
-}
+
 
 .lower-link{
     display: flex;
     justify-content: space-between;
     
 }
-a{
+main a{
     text-decoration:none;
     font-style: italic;
     color: #EE3C4C;
@@ -125,7 +113,7 @@ top:13px;
 .lower-link{
     margin-top: 36px;
 }
-hr{
+main hr{
     border: 1px solid #BBC3D0;
     width: 481px;
 height: 0px;
@@ -156,3 +144,31 @@ color: #DDE1E8;
     display: flex;
     flex-direction: row;
 }
+.height{
+    height: 1024px
+}
+#btn-1{
+    width: 480px;
+    height: 49px;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+    background: linear-gradient(180deg, #F06243 0%, #EE3C4C 100%);
+    border: 1px solid #DDE1E8;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    color:white;
+    margin-top: 34px;
+    }
+    #btn-2{
+    width: 480px;
+    height: 49px;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+    border: 1px solid #0A2145;
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.1));
+    border-radius: 8px;
+    color: #051123;
+    margin-top: 64px;
+    } 
