--- a/FrontEnd/src/pages/Home/Home.css
+++ b/FrontEnd/src/pages/Home/Home.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .hero{
@@ -14,7 +13,7 @@
 }
 .hero-div h1{
     color: white;
-    margin-top: 120px;
+    margin-top: 0px;
     padding-top: 80px;
     margin-bottom: 20px;
     text-align: center;
@@ -41,6 +40,8 @@
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     font-size: 16px;
+    margin-right: -10px;
+    margin-left: -10px;
 }
 .Explore button{
     width: 130px;
@@ -51,7 +52,7 @@
     color: white;
     margin-left: 600px;
     margin-right: 600px;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     margin-top: 70px;
     margin-bottom: 40px;
 }
@@ -248,3 +249,178 @@ text-align: center;
 
 
 
+/* ====================about=========== */
+.About-section{
+  display: flex;
+  margin-top: 60px;
+}
+
+.about-1{
+  margin-left: 140px;
+}
+img{
+  border-radius: 12px;
+}
+.about{
+  margin-left: -20px;
+  margin-top: 0px;
+}
+.about-info{
+  margin-left: 130px;
+}
+.about .about-info-2{
+  color:  #343434;
+  margin-right: 190px;
+  margin-left: -50px;
+  font-weight: 400px;
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 40px;
+}
+.about .about-info-3{
+  color:  #343434;
+  margin-left: 130px;
+  margin-right: 180px;
+  text-align: left;
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+.about .about-info-4, a{
+  color:  #EE3C4C;
+  font-size: 20px;
+  font-weight: 18px;
+  margin-left: 20px;
+  margin-top: 40px;
+}
+
+
+/* =========================================== */
+
+
+
+
+
+
+/* ================================== */
+
+
+
+
+
+/* ============Serach bar========== */
+
+
+.container {
+  width: 500px;
+  margin: 60px 40px 100px 230px;
+  border-radius: 7px;
+  /* background-color: #ABC7F3; */
+
+}
+
+
+.Card {
+  margin-top: 100px;
+  margin-left: 140px;
+  margin-right: 260px;
+  border-radius: var(--border-radius);
+  background: #0A2145;
+  overflow: hidden;
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6), 2px 2px 12px #c8d8e7;
+  width: 1100px;
+  height: 150px;
+  border-radius: 12px;
+
+}
+
+.CardInner {
+  display: flex;
+  padding: 1px 1px;
+  background-color: #0A2145;;
+  border-radius: var(--border-radius);
+}
+.CardInner .cardUpdate{
+  margin-right: -100px;
+}
+.CardInner .cardUpdate h3{
+  color: white;
+  margin-left: 80px;
+  font-size: 24px;
+}
+.CardInner .cardUpdate .pppp{
+  margin-left: 33px;
+  margin-right: 30px;
+  margin-top: -15px;
+  font-size: 16px;
+  font-weight: 300;
+}
+.container {
+  display: flex;
+}
+
+
+
+.Icon svg {
+  transform: translate(-1px, -1px);
+}
+
+label {
+  display: block;
+  color: #3c4b66;
+  margin-bottom: 12px;
+  /* background: linear-gradient(45deg, #6b7b8f, #3c4b66); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.InputContainer {
+  width: 100%;
+  
+}
+
+input {
+  
+  background-color: #e3edf7;
+  padding: 16px 32px;
+  border: none;
+  display: block;
+  font-weight: 600;
+  /* color: #a9b8c9; */
+  -webkit-appearance: none;
+  transition: all 240ms ease-out;
+  width: 100%;
+}
+input::placeholder {
+  color: #6d7f8f;
+}
+input:focus {
+  outline: none;
+  color: #6d7f8f;
+  background-color: #eff5fa;
+}
+
+.InputContainer {
+  --top-shadow: inset 1px 1px 3px #c5d4e3, inset 2px 2px 6px #c5d4e3;
+  --bottom-shadow: inset -2px -2px 4px rgba(255,255,255, .7);
+  position: relative;
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
+.InputContainer:before, .InputContainer:after {
+  left: 0;
+  top: 0;
+  display: block;
+  content: "";
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.InputContainer:before {
+  box-shadow: var(--bottom-shadow);
+}
+.InputContainer:after {
+  box-shadow: var(--top-shadow);
+}
