--- a/FrontEnd/src/pages/Home/Home.css
+++ b/FrontEnd/src/pages/Home/Home.css
@@ -1,250 +1,307 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
-.hero{
-    width: 100%;
-    max-height: 800px;
-    background-color: #0A2145;
-    align-items: center;
-
+.hero {
+  width: 100%;
+  max-height: 800px;
+  background-color: #0a2145;
+  align-items: center;
 }
 .hero-div {
-    background-color: #0A2145;
-    height: 170px;
+  background-color: #0a2145;
+  height: 170px;
 }
-.hero-div h1{
-    color: white;
-    margin-top: 120px;
-    padding-top: 80px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 60px;
-    font-weight: 600;
-    line-height: 64px;
-    font-family: 'Open Sans', sans-serif;
+.hero-div h1 {
+  color: white;
+  padding-top: 80px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 64px;
+  font-family: "Open Sans", sans-serif;
 }
-.hero p{
-    color: white;
-    text-align: center;
-    margin-left: 350px;
-    margin-right: 350px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    
-   
-    
+.hero .hero-text {
+  color: white;
+  text-align: center;
+  margin-left: 350px;
+  margin-right: 350px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
 }
-.Explore a{
-    color: white;
-   top: 160px;
-    padding-top: 40px;
-    font-family: 'Open Sans', sans-serif;
-    text-decoration: none;
-    font-size: 16px;
+.Explore a {
+  color: white;
+  top: 160px;
+  padding-top: 40px;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-size: 16px;
 }
-.Explore button{
-    width: 130px;
-    height: 40px;
-    border: none;
-    border-radius: 7px;
-    background: linear-gradient(180deg, #F06243 0%, #EE3C4C 100%);
-    color: white;
-    margin-left: 600px;
-    margin-right: 600px;
-    font-family: 'Open Sans', sans-serif;
-    margin-top: 70px;
-    margin-bottom: 40px;
+.Explore button {
+  width: 130px;
+  height: 40px;
+  border: none;
+  border-radius: 7px;
+  background: linear-gradient(180deg, #f06243 0%, #ee3c4c 100%);
+  color: white;
+  margin-left: 600px;
+  margin-right: 600px;
+  font-family: "Open Sans", sans-serif;
+  margin-top: 70px;
+  margin-bottom: 40px;
 }
-.code-codes{
-    margin-left: 260px;
-    margin-right: 260px;
-    
+.code-codes {
+  margin-left: 260px;
+  margin-right: 260px;
 }
-.code-codes .code2{
-    margin-left: -50px;
-    margin-top: -300px;
+.code-codes .code2 {
+  margin-left: -50px;
+  margin-top: -300px;
 }
-.code-codes .code3{
-    margin-top: -230px;
-    margin-left: -100px;
-
+.code-codes .code3 {
+  margin-top: -230px;
+  margin-left: -100px;
 }
-.brand{
-    height: 300px;
-    background-color: #EAF1FC;
-    margin-top: -68px;
+.brand {
+  height: 300px;
+  background-color: #eaf1fc;
+  margin-top: -68px;
 }
-.brands-with{
-    margin-top: 40px;
+.brands-with {
+  margin-top: 40px;
 }
-.brands-with .brand1{
-margin-top: 60px;
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 34px;
-line-height: 40px;
-text-align: center;
-color: #0A2145;
-font-family: 'Open Sans', sans-serif;
-padding-top: 60px;
+.brands-with .brand1 {
+  margin-top: 60px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 40px;
+  text-align: center;
+  color: #0a2145;
+  font-family: "Open Sans", sans-serif;
+  padding-top: 60px;
 }
-.brands-with .brand2{
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-margin-top: -15px;
-line-height: 28px;
-text-align: center;
-color: #1B2028;
+.brands-with .brand2 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: -15px;
+  line-height: 28px;
+  text-align: center;
+  color: #1b2028;
 }
 
-.Part{
-    display: flex;
-    margin-left: 100px;
-    margin-right: 100px;
-    line-height: 24px;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.Part {
+  display: flex;
+  margin-left: 100px;
+  margin-right: 100px;
+  line-height: 24px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-.partner3{
-    margin-top: -5px;
+.partner3 {
+  margin-top: -5px;
 }
-.choose{
-padding-top: 50px;
-
+.choose {
+  padding-top: 50px;
 }
-.choose h1{
-text-align: center;
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 34px;
-line-height: 40px;
-color: #0A2145;
-flex: none;
+.choose h1 {
+  text-align: center;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 40px;
+  color: #0a2145;
+  flex: none;
 }
-.choose  p{
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-text-align: center;
-color: #0A2145;
-
+.choose p {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #0a2145;
 }
-
-
-
-
-
-
-
 
 .wrapper {
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    min-width: 1000px;
-    max-width: 1100px;
-    height: 100%;
-    position: relative;
-    box-sizing: inherit;
-    box-sizing: border-box;
-    
-  }
-  
-  .wrapper:before,
-  .wrapper:after {
-    content: " ";
-    display: table;
-  }
-  
-  .wrapper:after {
-    clear: both;
-  }
-  
-  .wrapper .box {
-    margin: 10px auto;
-    padding: 0;
-    position: relative;
-    float: left;
-    width: 33.33333%;
-    height: 100%;
-    text-align: center;
-    box-sizing: border-box;
-  }
-  
-  .box .content {
-    margin: 10px;
-    padding: 10px;
-    min-height: 100px;
-    color: #1B2028;
-    background-color: #FEF2EF;
-    font-weight: 400;
-    font-size: 16px;
-    font-family: 'Open Sans';
-    box-sizing: border-box;
-    border-radius: 32px;
-    margin-left: 20px;
-    margin-right: 20px;
-   
-  }
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  min-width: 1000px;
+  max-width: 1100px;
+  height: 100%;
+  position: relative;
+  box-sizing: inherit;
+  box-sizing: border-box;
+}
 
- 
-  .box .content11 {
-    margin: 10px;
-    padding: 10px;
-    min-height: 100px;
-    color: #1B2028;
-    background-color:  #EAF1FC;;
-    font-weight: 400;
-    font-size: 16px;
-    font-family: 'Open Sans';
-    box-sizing: border-box;
-    border-radius: 32px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  
-.box .content .content1{
-color: #1B2028;
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 32px;
-text-align: center;
+.wrapper:before,
+.wrapper:after {
+  content: " ";
+  display: table;
+}
+
+.wrapper:after {
+  clear: both;
+}
+
+.wrapper .box {
+  margin: 10px auto;
+  padding: 0;
+  position: relative;
+  float: left;
+  width: 33.33333%;
+  height: 100%;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.box .content {
+  margin: 10px;
+  padding: 10px;
+  min-height: 328px;
+  color: #1b2028;
+  background-color: #fef2ef;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Open Sans";
+  box-sizing: border-box;
+  border-radius: 32px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.box .content11 {
+  margin: 10px;
+  padding: 10px;
+  min-height: 328px;
+  color: #1b2028;
+  background-color: #eaf1fc;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Open Sans";
+  box-sizing: border-box;
+  border-radius: 32px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.box .content .content1 {
+  color: #1b2028;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
 }
 
 .box .content .pinkCol {
-    width: 15px;
-    height: 15px;
-    padding:  15px  30px 30px 15px;
-    border-radius: 50%;
-    margin-left: 120px;
-    margin-right: 120px;
+  width: 15px;
+  height: 15px;
+  padding: 15px 30px 30px 15px;
+  border-radius: 50%;
+  margin-left: 120px;
+  margin-right: 120px;
 }
-.box .content11 .bluurur{
-    width: 15px;
-    height: 15px;
-    padding:  15px  30px 30px 15px;
-    border-radius: 50%;
-    margin-left: 120px;
-    margin-right: 120px;
-}
-
-.box .content .pinkCol{
-  background: #ffc0c0; 
-  color: #F06243; 
-}
-.box .content11 .bluurur{
-    background-color: #ABC7F3;
-    color: #0A2145;
+.box .content11 .bluurur {
+  width: 15px;
+  height: 15px;
+  padding: 15px 30px 30px 15px;
+  border-radius: 50%;
+  margin-left: 120px;
+  margin-right: 120px;
 }
 
+.box .content .pinkCol {
+  background: #ffc0c0;
+  color: #f06243;
+}
+.box .content11 .bluurur {
+  background-color: #abc7f3;
+  color: #0a2145;
+}
 
+.about_section {
+    display: flex;
+    width: 75%;
+    margin: auto;
+    justify-content: space-between;
+    padding: 6rem 0 8rem 0;
+}
 
+.about_text {
+    width: 35%;
+}
 
+.about_link {
+    color: #EE3C4C;
+    font-weight: 600;
+}
+
+.about-arrow{
+    vertical-align: -2.5px;
+}
+
+.testimonial_section {
+    background-color:  #EAF1FC;
+    padding: 4rem;
+    text-align: center;
+    margin-bottom: 5.5rem;
+}
+.testimonials__ {
+    display: flex;
+    justify-content: space-between;
+}
+.testimonial {
+    background-color: #FFFFFF;
+    width: 25%;
+    max-height: 348px;
+    margin-top: 2.5rem;
+    box-shadow: 0px 24px 24px -24px rgba(5, 17, 35, 0.2);
+    border-radius: 32px;
+    padding: 2.5rem;
+}
+.newsletter_section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #0A2145;
+    color: #FFFFFF;
+    width: 70%;
+    margin: auto;
+    padding: 37px 72px;
+    border-radius: 32px;
+}
+.newsletter_text {
+    width: 33%;
+}
+.newsletter_input {
+    background-color: #FFFFFF;
+    height: 3rem;
+    border-radius: 8px;
+}
+.newsletter_email::placeholder {
+    font-size: 16px;
+}
+.newsletter_input input:focus {
+    outline: none;
+}
+.newsletter_email {
+    border: none;
+    height: 90%;
+    padding-left: 10px;
+    border-radius: 8px;
+    color:  #1B2028;
+}
+
+.newsletter_arrow {
+    color: #EE3C4C;
+    vertical-align: -0.4rem;
+    transform: scale(1.4);
+    padding-inline: 10px;
+    cursor: pointer;
+}
