consuming backend api in the frontend

--- a/FrontEnd/src/assets/styles/Login.css
+++ b/FrontEnd/src/assets/styles/Login.css
@@ -66,7 +66,7 @@ border-radius: 8px;
 color: white;
 margin-top: 36px;
 }
-#inputs{
+.inputs{
 width: 480px;
 height: 49px;
 border: 1px solid #DDE1E8;
@@ -160,7 +160,7 @@ color: #DDE1E8;
     color:white;
     margin-top: 34px;
     }
-    #btn-2{
+#btn-2{
     width: 480px;
     height: 49px;
     align-items: center;
@@ -171,4 +171,48 @@ color: #DDE1E8;
     border-radius: 8px;
     color: #051123;
     margin-top: 64px;
-    } 
+    }
+.instructions {
+        font-size: 0.75rem;
+        border-radius: 0.5rem;
+        background: #000;
+        color: #fff;
+        padding: 0.25rem;
+        position: relative;
+        bottom: -10px;
+      }
+      
+.instructions>svg {
+        margin-right: 0.25rem;
+      }
+      
+.offscreen {
+        position: absolute;
+        left: -9999px;
+      }
+      
+.hide {
+        display: none;
+      }
+      
+.valid {
+        color: limegreen;
+        margin-left: 0.25rem;
+      }
+      
+.invalid {
+        color: red;
+        margin-left: 0.25rem;
+      }
+      
+.errmsg {
+        background-color: lightpink;
+        color: firebrick;
+        font-weight: bold;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
+      }
+      
+.line {
+        display: inline-block;
+      }
