--- a/FrontEnd/src/pages/Home/Home.css
+++ b/FrontEnd/src/pages/Home/Home.css
@@ -14,6 +14,7 @@
   color: white;
   padding-top: 80px;
   margin-bottom: 20px;
+  margin-top: 0px;
   text-align: center;
   font-size: 60px;
   font-weight: 600;
