removed active class

--- a/FrontEnd/src/assets/styles/Header.css
+++ b/FrontEnd/src/assets/styles/Header.css
@@ -43,9 +43,9 @@
     color: inherit;
     /* background-color:brown; */
 }
-.header .header-container .active{
+/* .header .header-container .active{
     background-color: #223758;
-} 
+}  */
 .nav{
     text-decoration: none;
     color: inherit;
