--- a/FrontEnd/src/pages/Home/Home.css
+++ b/FrontEnd/src/pages/Home/Home.css
@@ -2,8 +2,7 @@
 
 .hero {
   width: 100%;
-  max-height: 800px;
-  background-color: #0a2145;
+  background-color: white;
   align-items: center;
 }
 .hero-div {
@@ -29,6 +28,10 @@
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
+.Explore{
+  background-color: #0a2145;
+  margin-bottom: 0;
+}
 .Explore a {
   color: white;
   top: 160px;
@@ -49,6 +52,15 @@
   font-family: "Open Sans", sans-serif;
   margin-top: 70px;
   margin-bottom: 40px;
+}
+.codes{
+  background-color: #0a2145;
+  margin-top: 0;
+}
+.codes h1{
+  margin-top:0px;
+  border: none;
+  outline: none;
 }
 .code-codes {
   margin-left: 260px;
@@ -226,6 +238,11 @@
   color: #0a2145;
 }
 
+.home_about{
+  background: white;
+  width:100%
+}
+
 .about_section {
     display: flex;
     width: 75%;
@@ -266,6 +283,11 @@
     border-radius: 32px;
     padding: 2.5rem;
 }
+.newsletter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .newsletter_section {
     display: flex;
     align-items: center;
@@ -276,6 +298,7 @@
     margin: auto;
     padding: 37px 72px;
     border-radius: 32px;
+    margin-bottom: 88px;
 }
 .newsletter_text {
     width: 33%;
@@ -306,3 +329,5 @@
     padding-inline: 10px;
     cursor: pointer;
 }
+
+
