--- a/FrontEnd/src/pages/Home/Home.css
+++ b/FrontEnd/src/pages/Home/Home.css
@@ -7,7 +7,7 @@
 }
 .hero-div {
   background-color: #0a2145;
-  height: 170px;
+  /* height: 170px; */
 }
 .hero-div h1 {
   color: white;
@@ -23,20 +23,20 @@
 .hero .hero-text {
   color: white;
   text-align: center;
-  margin-left: 350px;
-  margin-right: 350px;
+  margin: auto;
+  width: 50%;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
 .Explore{
   background-color: #0a2145;
   margin-bottom: 0;
+  display: flex;
+
 }
 .Explore a {
   color: white;
-  top: 160px;
   padding-top: 40px;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
   font-size: 16px;
 }
@@ -47,8 +47,7 @@
   border-radius: 7px;
   background: linear-gradient(180deg, #f06243 0%, #ee3c4c 100%);
   color: white;
-  margin-left: 600px;
-  margin-right: 600px;
+  margin: 0 auto;
   font-family: "Open Sans", sans-serif;
   margin-top: 70px;
   margin-bottom: 40px;
@@ -56,26 +55,37 @@
 .codes{
   background-color: #0a2145;
   margin-top: 0;
+
 }
 .codes h1{
   margin-top:0px;
   border: none;
   outline: none;
+  width: 60%;
+}
+.codes .code-codes h1 img{
+  object-fit: contain !important;
+  width: 100%;
 }
 .code-codes {
-  margin-left: 260px;
-  margin-right: 260px;
+  /* margin-left: 20%; */
+  /* margin-right: 20%; */
+  width: 100%;
 }
+.code-codes .code1{
+  margin-left: 20%;
+}
+
 .code-codes .code2 {
-  margin-left: -50px;
-  margin-top: -300px;
+  margin-left: 19%;
+  margin-top: -19%;
 }
 .code-codes .code3 {
-  margin-top: -230px;
-  margin-left: -100px;
+  margin-top: -13.5%;
+  margin-left: 18%;
 }
 .brand {
-  height: 300px;
+  min-height: 300px;
   background-color: #eaf1fc;
   margin-top: -68px;
 }
@@ -99,16 +109,17 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  margin-top: -15px;
   line-height: 28px;
   text-align: center;
   color: #1b2028;
+  width: 80%;
+  margin: auto;
+  margin-top: -15px;
 }
 
 .Part {
   display: flex;
-  margin-left: 100px;
-  margin-right: 100px;
+  /* margin: auto; */
   line-height: 24px;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -142,16 +153,15 @@
 .wrapper {
   margin: 0 auto;
   padding: 0;
-  width: 100%;
-  min-width: 1000px;
-  max-width: 1100px;
+  width: 84%;
   height: 100%;
-  position: relative;
-  box-sizing: inherit;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
 
-.wrapper:before,
+/* .wrapper:before,
 .wrapper:after {
   content: " ";
   display: table;
@@ -159,14 +169,12 @@
 
 .wrapper:after {
   clear: both;
-}
+} */
 
 .wrapper .box {
   margin: 10px auto;
   padding: 0;
-  position: relative;
-  float: left;
-  width: 33.33333%;
+  width: 350px;
   height: 100%;
   text-align: center;
   box-sizing: border-box;
@@ -245,9 +253,11 @@
 
 .about_section {
     display: flex;
-    width: 75%;
+    width: 84%;
     margin: auto;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
     padding: 6rem 0 8rem 0;
 }
 
@@ -272,13 +282,18 @@
 }
 .testimonials__ {
     display: flex;
-    justify-content: space-between;
+    width: 84%;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin:auto;
 }
 .testimonial {
     background-color: #FFFFFF;
-    width: 25%;
+    width: 200px;
     max-height: 348px;
+    margin: auto;
     margin-top: 2.5rem;
+    
     box-shadow: 0px 24px 24px -24px rgba(5, 17, 35, 0.2);
     border-radius: 32px;
     padding: 2.5rem;
@@ -290,6 +305,7 @@
 }
 .newsletter_section {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     background-color: #0A2145;
@@ -301,12 +317,16 @@
     margin-bottom: 88px;
 }
 .newsletter_text {
-    width: 33%;
+    /* width: 33%; */
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 .newsletter_input {
     background-color: #FFFFFF;
+    min-width:400px ;
     height: 3rem;
     border-radius: 8px;
+    margin: 0 auto;
 }
 .newsletter_email::placeholder {
     font-size: 16px;
@@ -325,9 +345,27 @@
 .newsletter_arrow {
     color: #EE3C4C;
     vertical-align: -0.4rem;
-    transform: scale(1.4);
-    padding-inline: 10px;
+    transform: scale(1.5);
     cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-div{
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-div h1{
+    font-size: 24px;
+  }
+  .about_section img{
+    width: 100%;
+    height: auto;
+    margin: auto;
+  }
+  .about_text{
+    width: 100%;
+  }
+
 }
 
 
