--- a/FrontEnd/src/assets/styles/Footer.css
+++ b/FrontEnd/src/assets/styles/Footer.css
@@ -3,15 +3,10 @@
     position: relative;
     width: 100%;
     height:300px;
-    /* bottom:0px;
-    left:0px; */
     background-color: #0A2145;
     color: white;
     display: flex;
     flex-direction: row;
-    /* justify-content: flex-start;
-    align-items: center; */
-    /* padding: 0 0px 0 60px; */
     
 }
 .footer .footer-items{
@@ -60,6 +55,8 @@
         ;
         line-height: 20px;
         justify-items: center;
+        height: auto;
+        padding: 10px 0;
     }
     .footer .img{
         margin: 0;
@@ -86,7 +83,7 @@
         gap: 0px;
         align-items: start;
         justify-items:center;
-        /* height: auto; */
+        margin-bottom: 80px !important;
 
     }
     .footer .d{
@@ -100,14 +97,14 @@
         width: auto !important;
         font-size: 14px !important;
         margin: 10px;
+        
     }
     .footer .footer-items .footer-copy{
         position: absolute;
         bottom: 10px;
-        margin: auto;
         text-align: center;
-        left: 30%;
-        right:30%;
+        width: 100%;
+        margin-left: -20px;
     }
     .footer .i{
         grid-area: i;
