--- a/FrontEnd/src/assets/styles/Home.css
+++ b/FrontEnd/src/assets/styles/Home.css
@@ -225,16 +225,14 @@
   height: 15px;
   padding: 15px 30px 30px 15px;
   border-radius: 50%;
-  margin-left: 120px;
-  margin-right: 120px;
+  margin: 0 auto;
 }
 .box .content11 .bluurur {
   width: 15px;
   height: 15px;
   padding: 15px 30px 30px 15px;
   border-radius: 50%;
-  margin-left: 120px;
-  margin-right: 120px;
+  margin: 0 auto;
 }
 
 .box .content .pinkCol {
@@ -382,6 +380,19 @@
     width:100%;
     text-align: center;
     /* margin: 0 auto; */
+  }
+  .wrapper .box{
+    width: 90%;
+  }
+  .wrapper .box .content{
+    width:100%;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  .wrapper .box .content11{
+    width:100%;
+    margin-left:0 !important;
+    margin-right: 0 !important;
   }
 
 }
