--- a/FrontEnd/src/assets/styles/Header.css
+++ b/FrontEnd/src/assets/styles/Header.css
@@ -102,7 +102,7 @@
     }
     .mobile-flex{
         display: flex;
-        width: 90% !important;
+        width: 100% !important;
         margin: auto;
         /* align-items: center; */
     }
@@ -114,7 +114,7 @@
         /* width: */
         padding: auto;
         margin: 0 20px;
-        width: 115px !important;
+        /* width: 115px !important; */
         margin-bottom: 15px;
     }
     .mobile-flex .si {
