--- a/FrontEnd/src/assets/styles/Header.css
+++ b/FrontEnd/src/assets/styles/Header.css
@@ -93,7 +93,7 @@
     }
     .header a{
         display:none;
-        width:100%;
+        /* width:100%; */
         text-align: center;
         font-size: 25px;
     }
