--- a/FrontEnd/src/assets/styles/Footer.css
+++ b/FrontEnd/src/assets/styles/Footer.css
@@ -83,7 +83,7 @@
         gap: 0px;
         align-items: start;
         justify-items:center;
-        margin-bottom: 80px !important;
+        margin-bottom: 100px !important;
 
     }
     .footer .d{
@@ -93,11 +93,14 @@
         max-height: 100px;
         text-align: center;
     }
+    .footer .d p{
+        /* margin-bottom: 20px; */
+    }
     .footer .footer-items{
         width: auto !important;
         font-size: 14px !important;
         margin: 10px;
-        
+        margin-bottom: 20px;
     }
     .footer .footer-items .footer-copy{
         position: absolute;
