--- a/FrontEnd/src/assets/styles/Header.css
+++ b/FrontEnd/src/assets/styles/Header.css
@@ -120,5 +120,6 @@
     .mobile-flex .si {
         margin: 0 auto !important;
         margin-bottom: 15px !important;
+        width: 115px !important;
     }
 }
