--- a/FrontEnd/src/assets/styles/Home.css
+++ b/FrontEnd/src/assets/styles/Home.css
@@ -1,5 +1,3 @@
-
-
 .hero {
   width: 100%;
   background-color: white;
@@ -28,11 +26,10 @@
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
-.Explore{
+.Explore {
   background-color: #0a2145;
   margin-bottom: 0;
   display: flex;
-
 }
 .Explore a {
   color: white;
@@ -52,18 +49,17 @@
   margin-top: 70px;
   margin-bottom: 40px;
 }
-.codes{
+.codes {
   background-color: #0a2145;
   margin-top: 0;
-
 }
-.codes h1{
-  margin-top:0px;
+.codes h1 {
+  margin-top: 0px;
   border: none;
   outline: none;
   width: 60%;
 }
-.codes .code-codes h1 img{
+.codes .code-codes h1 img {
   object-fit: contain !important;
   width: 100%;
 }
@@ -72,17 +68,21 @@
   /* margin-right: 20%; */
   width: 100%;
 }
-.code-codes .code1{
-  margin-left: 20%;
+.code-codes .code1 {
+  margin-left: 24%;
+  width: 55%;
 }
 
 .code-codes .code2 {
-  margin-left: 19%;
-  margin-top: -19%;
+  margin-left: 20.5%;
+  margin-top: -19.5%;
+  width: 62%;
 }
 .code-codes .code3 {
-  margin-top: -13.5%;
-  margin-left: 18%;
+  margin-top: -16.5%;
+  margin-left: 17.5%;
+
+  width: 68%;
 }
 .brand {
   min-height: 300px;
@@ -244,157 +244,179 @@
   color: #0a2145;
 }
 
-.home_about{
+.home_about {
   background: white;
-  width:100%
+  width: 100%;
 }
 
 .about_section {
-    display: flex;
-    width: 84%;
-    margin: auto;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 6rem 0 8rem 0;
+  display: flex;
+  width: 84%;
+  margin: auto;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 6rem 0 8rem 0;
 }
 
 .about_text {
-    width: 35%;
+  width: 35%;
+}
+.about-about h2 {
+  padding-top: 30%;
 }
 
 .about_link {
-    color: #EE3C4C;
-    font-weight: 600;
+  color: #ee3c4c;
+  font-weight: 600;
 }
 
-.about-arrow{
-    vertical-align: -2.5px;
+.about-arrow {
+  vertical-align: -2.5px;
 }
 
 .testimonial_section {
-    background-color:  #EAF1FC;
-    padding: 4rem;
-    text-align: center;
-    margin-bottom: 5.5rem;
+  background-color: #eaf1fc;
+  padding: 4rem;
+  text-align: center;
+  margin-bottom: 5.5rem;
 }
 .testimonials__ {
-    display: flex;
-    width: 84%;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin:auto;
+  display: flex;
+  width: 84%;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
 }
 .testimonial {
-    background-color: #FFFFFF;
-    width: 200px;
-    max-height: 348px;
-    margin: auto;
-    margin-top: 2.5rem;
-    
-    box-shadow: 0px 24px 24px -24px rgba(5, 17, 35, 0.2);
-    border-radius: 32px;
-    padding: 2.5rem;
+  background-color: #ffffff;
+  width: 200px;
+  max-height: 348px;
+  margin: auto;
+  margin-top: 2.5rem;
+
+  box-shadow: 0px 24px 24px -24px rgba(5, 17, 35, 0.2);
+  border-radius: 32px;
+  padding: 2.5rem;
 }
-.newsletter{
+.newsletter {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .newsletter_section {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #0A2145;
-    color: #FFFFFF;
-    width: 70%;
-    margin: auto;
-    padding: 37px 72px;
-    border-radius: 32px;
-    margin-bottom: 88px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #0a2145;
+  color: #ffffff;
+  width: 70%;
+  margin: auto;
+  padding: 37px 72px;
+  border-radius: 32px;
+  margin-bottom: 88px;
 }
 .newsletter_text {
-    /* width: 33%; */
-    margin: 0 auto;
-    margin-bottom: 10px;
+  /* width: 33%; */
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
 .newsletter_input {
-    background-color: #FFFFFF;
-    min-width:400px ;
-    height: 3rem;
-    border-radius: 8px;
-    margin: 0 auto;
+  background-color: #ffffff;
+  min-width: 400px;
+  height: 3rem;
+  border-radius: 8px;
+  margin: 0 auto;
 }
 .newsletter_email::placeholder {
-    font-size: 16px;
+  font-size: 16px;
 }
 .newsletter_input input:focus {
-    outline: none;
+  outline: none;
 }
 .newsletter_email {
-    border: none;
-    height: 90%;
-    padding-left: 10px;
-    border-radius: 8px;
-    color:  #1B2028;
+  border: none;
+  height: 90%;
+  padding-left: 10px;
+  border-radius: 8px;
+  color: #1b2028;
 }
 
 .newsletter_arrow {
-    color: #EE3C4C;
-    vertical-align: -0.4rem;
-    transform: scale(1.5);
-    cursor: pointer;
+  color: #ee3c4c;
+  vertical-align: -0.4rem;
+  transform: scale(1.5);
+  cursor: pointer;
+  padding-right: 5px;
 }
 
 @media only screen and (max-width: 768px) {
-  .hero-div{
+  .hero-div {
     display: flex;
     flex-direction: column;
   }
-  .hero-div h1{
+  .hero-div h1 {
     font-size: 24px;
   }
-  .about_section img{
+  .about_section img {
     width: 100%;
     height: auto;
     margin: auto;
   }
-  .about_text{
+  .about_text {
     width: 100%;
   }
-  .newsletter_section{
+  .newsletter_section {
     width: 60%;
   }
-  .newsletter_input{
+  .newsletter_input {
     width: 100% !important;
     min-width: 200px !important;
   }
-  .newsletter_email{
+  .newsletter_email {
     width: 80%;
   }
-  .part{
-    justify-content:center;
+  .part {
+    justify-content: center;
   }
-  .partner{
-    width:100%;
+  .partner {
+    width: 100%;
     text-align: center;
     /* margin: 0 auto; */
   }
-  .wrapper .box{
+  .wrapper .box {
     width: 90%;
   }
-  .wrapper .box .content{
-    width:100%;
+  .wrapper .box .content {
+    width: 100%;
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
-  .wrapper .box .content11{
-    width:100%;
-    margin-left:0 !important;
+  .wrapper .box .content11 {
+    width: 100%;
+    margin-left: 0 !important;
     margin-right: 0 !important;
   }
-
+  .code-codes .code3 {
+    margin-top: -20%;
+  }
+  .code-codes .code2 {
+    margin-top: -29%;
+  }
+  .codes .code-codes h1 img {
+    object-fit: contain !important;
+    margin-left: -20%;
+    width: 130%;
+  }
+  .about_text {
+    text-align: center;
+  }
+  .testimonials__ {
+    width: 120%;
+    margin-left: -10%;
+  }
+  .newsletter_section {
+    width: 40%;
+  }
 }
-
-
