--- a/FrontEnd/src/assets/styles/Login.css
+++ b/FrontEnd/src/assets/styles/Login.css
@@ -1,218 +1,250 @@
-
-main{
-font-family: 'Open Sans';
+main {
+  font-family: "Open Sans";
+  /* background: #fff; */
 }
 
-.Main-Container{
-display: flex;
-width: 100%;
+.Main-Container {
+  display: flex;
+  /* width: 84%; */
+  flex-wrap: wrap;
+  /* height:100vh; */
+  margin: 0 auto;
 }
-.Left-Form-Container{
-background: #0A2145;
-border-radius: 0px 30px 30px 0px;
-text-align: center;
-width: 50%;
-height: inherit;
-display: flex;
-justify-content: center;
-align-items: center;
-
+.Left-Form-Container {
+  background: #0a2145;
+  border-radius: 0px 30px 30px 0px;
+  text-align: center;
+  width: 50%;
+  height: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.Icon{
-width: 226px;
-height: 226px;
-
+.Icon {
+  width: 226px;
+  height: 226px;
 }
-.Right-Form-Container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    padding: 100px 0px;
-}
-
-main h2{
-font-family: 'Open Sans';
-font-style: normal;
-font-weight:700;
-font-size: 34px;
-line-height: 40px;
-text-align: center;
-color: #051123;
-margin-top: 82px;
-margin-bottom: 86.5px;
+.Right-Form-Container {
+  /* background: white; */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 100px 0px;
 }
 
-form{
-    margin-top: 133px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-#submit, .but{
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 10px;
-gap: 10px;
-width: 480px;
-height: 49px;
-background: linear-gradient(180deg, #F06243 0%, #EE3C4C 100%);
-border: 1px solid #DDE1E8;
-border-radius: 8px;
-color: white;
-margin-top: 36px;
-}
-.inputs{
-width: 480px;
-height: 49px;
-border: 1px solid #DDE1E8;
-outline: none;
-padding-left: 10px;
+main h2 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 40px;
+  text-align: center;
+  color: #051123;
+  margin-top: 40px;
 }
 
-
-.lower-link{
-    display: flex;
-    justify-content: space-between;
-    
+form {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
-main a{
-    text-decoration:none;
-    font-style: italic;
-    color: #EE3C4C;
+#submit,
+.but {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  width: 480px;
+  height: 49px;
+  background: linear-gradient(180deg, #f06243 0%, #ee3c4c 100%);
+  border: 1px solid #dde1e8;
+  border-radius: 8px;
+  color: white;
+  margin-top: 36px;
 }
-.UpperLink{
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 20px;
-
-padding: 10px;
-gap: 10px;
-width: 480px;
-height: 49px;
-background: #FFFFFF;
-box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
-border-radius: 8px;
-}
-.Google-icon{
-    position:relative;
-    top:20px;
-    left:-100px;
-
-}
-.alt-Auth{
-position:relative;
-top:13px;
-}
-.lower-link{
-    margin-top: 36px;
-}
-main hr{
-    border: 1px solid #BBC3D0;
-    width: 481px;
-height: 0px;
-margin-top: 61px;
-}
-.base-link{
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 20px;
-margin-top: 38px;
+.inputs {
+  width: 480px;
+  height: 49px;
+  border: 1px solid #dde1e8;
+  outline: none;
+  padding-left: 10px;
 }
 
-#hrline{
-    width: 146px;
-    position: relative;
-    bottom: 50px;
+.lower-link {
+  display: flex;
+  justify-content: space-between;
 }
-.hrwrapper{
-margin-top: 30px;
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 20px;
-text-align: center;
-color: #DDE1E8;
-    display: flex;
-    flex-direction: row;
+main a {
+  text-decoration: none;
+  font-style: italic;
+  color: #ee3c4c;
 }
-.height{
-    height: 1024px
+.UpperLink {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+
+  padding: 10px;
+  gap: 10px;
+  width: 480px;
+  height: 49px;
+  background: #ffffff;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
-#btn-1{
-    width: 480px;
-    height: 49px;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    background: linear-gradient(180deg, #F06243 0%, #EE3C4C 100%);
-    border: 1px solid #DDE1E8;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    color:white;
-    margin-top: 34px;
-    }
-#btn-2{
-    width: 480px;
-    height: 49px;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    border: 1px solid #0A2145;
-    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.1));
-    border-radius: 8px;
-    color: #051123;
-    margin-top: 64px;
-    }
+.Google-icon {
+  position: relative;
+  top: 20px;
+  left: -100px;
+}
+.alt-Auth {
+  position: relative;
+  top: 13px;
+}
+.lower-link {
+  margin-top: 36px;
+}
+main hr {
+  border: 1px solid #bbc3d0;
+  width: 481px;
+  height: 0px;
+  margin-top: 61px;
+}
+.base-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 38px;
+}
+
+#hrline {
+  width: 146px;
+  position: relative;
+  bottom: 50px;
+}
+.hrwrapper {
+  margin-top: 30px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #dde1e8;
+  display: flex;
+  flex-direction: row;
+}
+.height {
+  height: 1024px;
+}
+#btn-1 {
+  width: 480px;
+  height: 49px;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: linear-gradient(180deg, #f06243 0%, #ee3c4c 100%);
+  border: 1px solid #dde1e8;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  color: white;
+  margin-top: 34px;
+}
+#btn-2 {
+  width: 480px;
+  height: 49px;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  border: 1px solid #0a2145;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.1));
+  border-radius: 8px;
+  color: #051123;
+  margin-top: 64px;
+}
 .instructions {
-        font-size: 0.75rem;
-        border-radius: 0.5rem;
-        background: #000;
-        color: #fff;
-        padding: 0.25rem;
-        position: relative;
-        bottom: -10px;
-      }
-      
-.instructions>svg {
-        margin-right: 0.25rem;
-      }
-      
+  font-size: 0.75rem;
+  border-radius: 0.5rem;
+  background: #000;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+
+.instructions > svg {
+  margin-right: 0.25rem;
+}
+
 .offscreen {
-        position: absolute;
-        left: -9999px;
-      }
-      
+  position: absolute;
+  left: -9999px;
+}
+
 .hide {
-        display: none;
-      }
-      
+  display: none;
+}
+
 .valid {
-        color: limegreen;
-        margin-left: 0.25rem;
-      }
-      
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+
 .invalid {
-        color: red;
-        margin-left: 0.25rem;
-      }
-      
+  color: red;
+  margin-left: 0.25rem;
+}
+
 .errmsg {
-        background-color: lightpink;
-        color: firebrick;
-        font-weight: bold;
-        padding: 0.5rem;
-        margin-bottom: 0.5rem;
-      }
-      
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .line {
-        display: inline-block;
-      }
+  display: inline-block;
+}
+
+@media only screen and (max-width: 768px) {
+  main {
+    background: #0a2145;
+  }
+  .Main-Container {
+    flex-direction: column;
+  }
+  .Left-Form-Container,
+  .Right-Form-Container {
+    width: 100%;
+  }
+  .Left-Form-Container {
+    /* background:#ffffff; */
+    border-radius: 0px;
+    height: 400px;
+  }
+  .Right-Form-Container {
+    background: #ffffff;
+    border-radius: 35px 35px 0px 0px;
+  }
+  form {
+    width: 100%;
+  }
+  #submit,
+  .inputs {
+    width: 95% !important;
+    margin: auto;
+  }
+  .height {
+    height: auto;
+  }
+}
